--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "buefy": "^0.6.1",
     "nuxt": "^1.0.0-rc11",
+    "vue": "2.4.4",
     "vue-json-schema": "^1.1.0"
   },
   "devDependencies": {
