--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/font-awesome": "^1.0.3",
     "buefy": "^0.6.1",
     "nuxt": "^1.0.0-rc11",
     "vue": "2.4.4",
